# android-study

./: .gitignore  README.md  Readme.md  aar_list.md
30DaysOfWellness/: README.md  settings.gradle.kts
AndroidDemo1/: README.md  settings.gradle
DesignPatterns/: person.ser  pom.xml
DiceRoller/: README.md
FlightSearch/: build.gradle.kts
GreetingCard/: README.md
LifeCycle/: README.MD
MyCity/: README.md
SuperHeroes/: README.md
android-basics-kotlin-sql-basics-app/: README.md
basic-android-kotlin-compose-training-affirmations/: README.md
basic-android-kotlin-compose-training-cupcake/: README.md
basic-android-kotlin-compose-training-dessert-clicker/: README.md
basic-android-kotlin-compose-training-dessert-release/: README.md
basic-android-kotlin-compose-training-inventory-app/: README.md
basic-android-kotlin-compose-training-juice-tracker/: README.md
basic-android-kotlin-compose-training-juice-tracker-views/: README.md
basic-android-kotlin-compose-training-lunch-tray/: README.md
basic-android-kotlin-compose-training-mars-photos/: README.md
basic-android-kotlin-compose-training-reply-app/: README.md
basic-android-kotlin-compose-training-tip-calculator/: README.md
basic-android-kotlin-compose-training-unscramble/: README.md
basic-android-kotlin-compose-training-woof/: README.md
basic-android-kotlin-compose-training-workmanager/: README.md
gradle-tutorial/: settings.gradle
xml-and-compose-view-samples/app/src/main/cpp/: CMakeLists.txt  MyCppClass.cpp  MyCppWrapper.cpp  MyCppWrapper.hpp  MyCppWrapperJNI.cpp  native-lib.cpp
(+1079 files in other folders)
